# circuit_symbol_detector

./: README.md  main.py  pyproject.toml
data/: example.py
